# charis-dep

./: .gitignore  LICENSE  MANIFEST.in  README  README.md  README.rst  TestingAndPlottingFuncs.py  autodoc.sh  depStarter.py  make_flat.py  make_lensletflat.py  non_linearity.py  pyproject.toml  readme.txt  setup-readme.txt  setup.py
charis/: README.md  __init__.py  buildcalibrations.py  extractcube.py  hexplot.py  sample.ini  test_utr.py
charis/calibrations/SPHERE/: neighbour_indices.json  neighbour_indices_incl_center.json
charis/calibrations/SPHERE_YH/: hires_psflets_lam1123.fits  hires_psflets_lam1545.fits  (+1 more)
charis/image/: __init__.py  hex.py  image.py  image_geometry.py  map_hexagon_to_rectilinear.py  psflet.py  sutherland_hodgman.py  test_sutherland_hodgman.py  testcases.py
charis/instruments/: __init__.py  instruments.py
charis/parallel/: __init__.py  par_utils.py
charis/primitives/: __init__.py  buildmonochrome.py  fit_psflets.py  locate_psflets.py  matutils.c  matutils.pyx  offset_cal.py  setup.py
charis/tools/: __init__.py  charisLogger.py  toolbox.py
charis/utr/: __init__.py  calc_metadata.py  fitramp.c  fitramp.pyx  setup.py  utr.py
code/: 20160408_broad.ini  TestingAndPlottingFuncs.py  TestingFuncs.py  buildcal.py  buildcalibrations.py  buildcalibrations_full.py  buildimage.py  depStarter.py  extractcube.py  gain.py  sample.ini  test_distortion.py  test_lenslet_data.py  test_routines.py  test_utr.py  utr.py
code/characterize/: gain.py  read_noise.py
code/configFiles/: DEPconfig.py  __init__.py
code/image/: image.py  psflet.py  testcases.py
code/parallel/: __init__.py
code/primitives/: __init__.py  buildmonochrome.py  calibrations.py  fit_psflets.py  locate_psflets.py  matutils.c  matutils.pyx  offset_cal.py  setup.py  wavelengthExtraction.py
code/testimage/: __init__.py  gen_noisy_image.py  summed_bkgnd_Strehl80.fits
code/tools/: __init__.py  badpix.py  charisLogger.py  generalTools.py  testingAndPlottingFuncs.py  utr.py
code/utr/: __init__.py  calc_metadata.py  fitramp.c  fitramp.pyx  setup.py  utr.py
configFiles/: DEPconfig.py
documentation/: Makefile  make.bat
documentation/source/: Extract_cubes.ipynb  Installation.ipynb  PostProcessing.ipynb  Run_wavecal.ipynb  conf.py  index.rst  tools.rst
documentation/sphinxBuilds/: Makefile
notebooks/: explore_cube.ipynb
primitives/: __init__.py  calibrations.py  wavelengthExtraction.py
sandbox/: testPlottingTools.py
scripts/: buildcal  buildcal.py  extractcube  extractcube.py  hexplot  hexplot.py
sphinxBuilds/source/: .gitignore  code.rst  code.rst~  conf.py  conf.py~  index.rst  index.rst~  primitives.rst  tools.rst
tools/: __init__.py  charisLogger.py  destripeTools.py  generalTools.py
(+178 files in other folders)
