[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm>=8.0",
    "wheel",
    "cython>=2.0.0,<3.1"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 127
target-version = "py312"
exclude = [
    'docs',
    '*_version.py',
]

[tool.ruff.lint]
# Enable Ruff rulesets you like (equivalent to Flake8 + isort, etc.)
select = ["E", "F", "I"]  # E/F = Flake8 rules, I = isort rules, C90 = McCabe complexity, D = docstrings
ignore = ["E203", "E501", "E712", "E722", "D100", "D104"] # ignore specific rules (customize as needed)

# Ignore specific docstring rules in test files
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 10

[tool.ruff.format]
quote-style = "double"  # to match Black formatting
indent-style = "space"
