[build-system]
requires = [
    "setuptools>=77",
    "setuptools_scm>=8.0",
    "wheel",
    "cython>=2.0.0,<3.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "charis"
version = "2.0.1"
description = "Data Reduction Pipeline for the CHARIS and SPHERE Integral-Field Spectrographs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "BSD-3-Clause"
authors = [
    {name = "Timothy Brandt, Maxime Rizzo, Matthias Samland"},
    {email = "timothy.d.brandt@gmail.com"}
]
dependencies = [
    "numpy>=2,<=3",
    "scipy",
    "astropy",
    "pandas",
    "tqdm",
    "future",
    "matplotlib",
    "bokeh",
    "bottleneck",
    "psutil"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]

[project.scripts]
buildcal = "scripts.buildcal:main"
extractcube = "scripts.extractcube:main"
hexplot     = "scripts.hexplot:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE*", "COPYING*", "NOTICE*"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools.package-data]
# include all .fits, .json, .dat recursively under calibrations/
"charis" = ["calibrations/**/*.fits", "calibrations/**/*.json", "calibrations/**/*.dat"]

[tool.ruff]
line-length = 127
target-version = "py312"
exclude = ["docs", "*_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501", "E712", "E722", "D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
